--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-13.25
+resolver: lts-14.27
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -44,8 +44,11 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
+allow-newer: true
 extra-deps:
     - aws-lambda-haskell-runtime-2.0.1
+    - git: https://github.com/klappvisor/haskell-telegram-api.git
+      commit: abbfd76c40f2783c113b660184a03cc94d58e751
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
